--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mosca": "^2.8.3",
     "mqtt": "^5.2.2",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
