--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "ag-grid-community": "30.2.1",
     "ag-grid-react": "30.2.1",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.2",
     "mosca": "^2.8.3",
     "mqtt": "^5.2.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
